--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -97,13 +97,16 @@
 </div>
 
 
-<div class="row">
-    <div class="col-12">
-        <div id="attendancePieChart" class="mb-4"></div>
+<div class="row justify-content-center">
+    <div class="col-md-4">
+        <div class="text-center">
+            <div id="attendancePieChart" class="mb-3" style="max-width: 300px;"></div>
+        </div>
     </div>
 </div>
 
-<div class="table-responsive" style=" overflow: hidden;">
+
+<div class="table-responsive">
     <table class="table datatables table-bordered table-condensed table-striped p-0 m-0 dataTable no-footer dtr-inline" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info" style="width: 100%; border: 1px solid #696969; border-radius: 10px;">
         <thead>
             <tr role="row">
@@ -128,6 +131,7 @@
         </tbody>
     </table>
 </div>
+
 
 <script>
 function addRow(subject, section, semester) {
