QR scanner & btn centered, changed btn color

--- a/src/templates/core/faculty/qrscanner.html
+++ b/src/templates/core/faculty/qrscanner.html
@@ -2,22 +2,30 @@
 
 {% block body %}
 
-<h1 class="h3 mb-4"><strong> QR Scanner</strong></h1>
+<div class="text-center">
+    <h1 class="h3 mb-4"><strong> QR Scanner</strong></h1>
 
-<div id="reader" style="display: inline-block; position: relative; padding: 0px; border: 1px solid silver;"></div>
+    <div id="reader" style="display: inline-block; position: relative; padding: 0px; border: 1px solid silver; border-radius: 10px; width: 190px;">
+    </div>
+    
+    <br><br><br>
+    <div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="outline: 1px #800000; margin-bottom: 30px;">
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+        <label class="btn" for="btnradio1" style="background-color: #800000; color: white; outline: 2px solid #800000; padding: 0.5rem 1rem; font-family: roboto; width: 158px;">PRESENT</label>
 
-<br><br><br>
-<div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="outline: 1px #800000; margin-bottom: 30px;">
-    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-    <label class="btn btn-outline-primary" for="btnradio1" style="background-color: #800000; color: white; outline: 2px solid #800000; padding: 7px 60px; font-family: roboto;">PRESENT</label>
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+        <label class="btn" for="btnradio2" style="background-color: white; color: #800000; outline: 2px solid #800000; padding: 0.5rem 1rem; font-family: roboto; width: 158px;">LATE</label>
+    </div>
 
-    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-    <label class="btn btn-outline-primary" for="btnradio2" style="background-color: white; color: #800000; outline: 2px solid #800000; padding: 7px 60px; font-family: roboto;">LATE</label>
+    <br>
+    <div class="d-flex justify-content-center">
+        <input type="button" onclick="absentButton()" class="btn-check" id="absent-btn" autocomplete="off">
+        <label class="btn" for="absent-btn" style="background-color: white; color: #800000; outline: 2px solid #808080; padding: 7px 40px; font-family: roboto;">MARK ALL MISSING AS ABSENT</label>
+    </div>
 </div>
 
-<br>
-<input type="button" onclick="absentButton()" class="btn-check" id="absent-btn" autocomplete="off">
-<label class="btn btn-outline-primary" for="absent-btn" style="background-color: white; color: #800000; outline: 2px solid #800000; padding: 7px 60px; font-family: roboto;">MARK ALL MISSING AS ABSENT</label>
+    
+
 
 <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
 <script>
@@ -33,11 +41,12 @@
 
     let html5QrcodeScanner = new Html5QrcodeScanner(
         "reader",
-        { fps: 10, qrbox: {width: 250, height: 250} },
-        verbose=true);
+        { fps: 10, qrbox: { width: 250, height: 250 } },
+        verbose=true
+    );
 
-                var lastResult = 0;
-                var audio = new Audio('https://audio.jukehost.co.uk/knEZ8zciYnwmdVPG1W72H5SbFDIanomR');
+    var lastResult = 0;
+    var audio = new Audio('https://audio.jukehost.co.uk/knEZ8zciYnwmdVPG1W72H5SbFDIanomR');
 
     function onScanSuccess(decodedText) {
         if (decodedText !== lastResult) {
@@ -60,7 +69,7 @@
         var xhttp = new XMLHttpRequest();
         xhttp.open("POST", "/get_qr", true);
         xhttp.setRequestHeader("Content-Type", "application/json");
-        xhttp.onreadystatechange = function() {
+        xhttp.onreadystatechange = function () {
             console.log(`Ready State: ${this.readyState}, Status: ${this.status}, s: ${s}, s_json: ${s_json}, isLate: ${isLate}`);
         };
         xhttp.send(s_json);
@@ -69,7 +78,7 @@
     html5QrcodeScanner.render(onScanSuccess, onScanFailure);
 
     const buttons = document.querySelectorAll('.btn-check');
-    const labels = document.querySelectorAll('.btn-outline-primary');
+    const labels = document.querySelectorAll('.btn');
     buttons.forEach((button, index) => {
         button.addEventListener('change', () => {
             labels.forEach((label, labelIndex) => {
@@ -78,16 +87,51 @@
                     label.style.color = 'white';
                     label.style.outline = '2px solid #800000';
                     isLate = index;
-                    console.log("Ready State" + index + isLate)
+                    console.log("Ready State " + index + " " + isLate);
                 } else {
                     label.style.backgroundColor = 'white';
                     label.style.color = '#800000';
-                    label.style.outline = '2px solid #800000';
+                    label.style.outline = '2px solid #800000';  
                 }
             });
         });
     });
 
 </script>
+
+<style>
+    /* Style for the Start Scanning button */
+    #html5-qrcode-button-camera-start {
+        background-color: #800000;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        /* Add any other styles you want to apply */
+    }
+    #html5-qrcode-button-camera-stop {
+        background-color: #800000;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    #html5-qrcode-anchor-scan-type-change{
+        margin-top: 10px;
+    }
+    #html5-qrcode-button-camera-permission{
+    background-color: #800000;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 150px;
+    }
+    
+    
+</style>
+
 
 {% endblock %}
