responsive tbl for mobile

--- a/src/templates/core/faculty/realtime.html
+++ b/src/templates/core/faculty/realtime.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<div class="table-responsive" style="overflow: hidden;">
+<div class="table-responsive" style="overflow-x: auto;">
     <table class="table datatables table-bordered table-condensed table-striped p-0 m-0" style="width: 100%; border: 1px solid #696969; border-radius: 10px;">
         <thead>
             <tr role="row">
