adjusted font size

--- a/src/templates/core/faculty/qrscanner.html
+++ b/src/templates/core/faculty/qrscanner.html
@@ -120,6 +120,7 @@
     }
     #html5-qrcode-anchor-scan-type-change{
         margin-top: 10px;
+        font-size: 15px;
     }
     #html5-qrcode-button-camera-permission{
     background-color: #800000;
