--- a/src/templates/core/faculty/records.html
+++ b/src/templates/core/faculty/records.html
@@ -8,7 +8,7 @@
     <input type="text" class="form-control" id="search-input" onkeyup="searchFunction()" placeholder="Search for surnames" aria-label="Search" aria-describedby="search-button">
     
 </div>
-<div class="table-responsive" style="overflow: hidden;">
+<div class="table-responsive" style="overflow-x: auto;">
   <table id="studentTable" class="table datatables table-bordered table-condensed table-striped p-0 m-0" style="width: 100%; border: 1px solid #696969; border-radius: 10px;">
       <thead>
           <tr>
