more prod fixes

--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -10,7 +10,7 @@
         width: 78px; /* Adjust the width as needed */
     }
 </style>
-<script src="..\..\..\static\js\loader.js"></script>
+<script src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
     google.charts.load('current', { 'packages': ['corechart'] });
     google.charts.setOnLoadCallback(drawChart);
