--- a/src/templates/core/student/index.html
+++ b/src/templates/core/student/index.html
@@ -110,7 +110,7 @@
     </div>
 
 
-<script src="..\..\..\static\js\loader.js"></script>
+<script src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
     google.charts.load('current', { 'packages': ['corechart'] });
     google.charts.setOnLoadCallback(drawChart);
