--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/stvnmbt/pasok/main/src/static/images/favicon-32x32.png">
     <meta charset="utf-8">
     <title>PASOK: A student attendance system using QR code</title>
     <!-- meta -->
@@ -9,16 +10,27 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- styles -->
     <!-- CSS only, search icons at: https://fontawesome.com/search?o=r&m=free -->
-    <link rel="stylesheet" href="..\static\fontawesome\css\all.min.css">
-    <link rel="stylesheet" href="..\static\css\bootstrap.min.css">
-    <link rel="stylesheet" href="..\static\css\styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-      @import url("../static/css/fonts.css");
+      .error {
+        color: red;
+        margin-bottom: 5px;
+        text-align: center;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
     </style>
     <!-- scripts -->
-    <script defer src="..\static\js\jquery-3.7.1.min.js"></script>
+    <script defer src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <!-- JavaScript Bundle with Popper -->
-    <script defer src="..\static\js\bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% block header %}{% endblock %}
   </head>
   <body>
