--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -1,112 +1,107 @@
 {% extends "_base.html" %}
 
-{% block content %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="..\static\fontawesome\css\all.min.css"> <!-- Replace with the correct path or use a CDN for Font Awesome -->
-  <style>
-      body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      overflow: hidden;
-      position: relative;
-    }
-
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(128, 0, 0, 0.139); /* Maroon color with some transparency */
-      z-index: -1;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url("../static/images/Lagoon.jpg");
-      background-size: cover;
-      opacity: 0.9;
-      z-index: -2;
-    }
-
-
-.pup-form-container {
-  background: #fff;
-  width: 60%; /* Adjust the width as needed */
-  max-width: 350px; /* Set a maximum width if desired */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  margin-top: 10px; /* Adjust the margin-top as needed */
-  padding: 1rem; /* Adjust the padding as needed */
-  border: 0.001px solid rgba(0, 0, 0, 0.16);
-  border-top: 8px solid maroon;
-  border-radius: 16px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
-}
-
-.form-floating {
+{% block header %}
+<style>
+  body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
   position: relative;
 }
 
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 0, 0, 0.139); /* Maroon color with some transparency */
+  z-index: -1;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://raw.githubusercontent.com/stvnmbt/pasok/main/src/static/images/Lagoon.jpg");
+  background-size: cover;
+  opacity: 0.9;
+  z-index: -2;
+}
+
+
+.pup-form-container {
+background: #fff;
+width: 60%; /* Adjust the width as needed */
+max-width: 350px; /* Set a maximum width if desired */
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+-ms-flex: 1 1 auto;
+flex: 1 1 auto;
+margin-top: 10px; /* Adjust the margin-top as needed */
+padding: 1rem; /* Adjust the padding as needed */
+border: 0.001px solid rgba(0, 0, 0, 0.16);
+border-top: 8px solid maroon;
+border-radius: 16px;
+box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
+}
+
+.form-floating {
+position: relative;
+}
+
 #toggleButton {
-  position: absolute;
-  top: 50%; /* Adjust the top position as needed */
-  right: 10px; /* Adjust the right position as needed */
-  transform: translateY(-50%);
-  cursor: pointer;
-  width: 20px; /* Adjust the width as needed */
+position: absolute;
+top: 50%; /* Adjust the top position as needed */
+right: 10px; /* Adjust the right position as needed */
+transform: translateY(-50%);
+cursor: pointer;
+width: 20px; /* Adjust the width as needed */
 }
 
 .login-header {
-  color: #800000;
-  font-size: 18px; /* Adjust the font size as needed */
-  font-weight: bold;
-  margin-bottom: 15px; /* Adjust the margin-bottom as needed */
-  text-align: center;
+color: #800000;
+font-size: 18px; /* Adjust the font size as needed */
+font-weight: bold;
+margin-bottom: 15px; /* Adjust the margin-bottom as needed */
+text-align: center;
 }
 
 .form-control {
-  font-size: 14px; /* Adjust the font size as needed */
+font-size: 14px; /* Adjust the font size as needed */
 }
 
 .btn-primary {
-  background-color: #800000;
-  border-radius: 30px; /* Adjust the border-radius as needed */
-  font-family: roboto;
-  font-weight: 550;
-  font-size: 14px; /* Adjust the font size as needed */
-  margin-top: 20px; /* Adjust the margin-top as needed */
-  margin-bottom: 20px; /* Adjust the margin-bottom as needed */
+background-color: #800000;
+border-radius: 30px; /* Adjust the border-radius as needed */
+font-family: roboto;
+font-weight: 550;
+font-size: 14px; /* Adjust the font size as needed */
+margin-top: 20px; /* Adjust the margin-top as needed */
+margin-bottom: 20px; /* Adjust the margin-bottom as needed */
 }
 
 .text-center {
-  margin-top: 15px; /* Adjust the margin-top as needed */
-  font-size: 12px; /* Adjust the font size as needed */
+margin-top: 15px; /* Adjust the margin-top as needed */
+font-size: 12px; /* Adjust the font size as needed */
 }
 
 </style>
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
+
   <div id="overlay"></div>
   <div class="pup-form-container">
-    <img src="../static/images/PUP logo.png" alt="PUP Logo" style="display: block; margin: 0 auto; max-width: 80px; max-height: 80px; margin-bottom: 10px;">
+    <img src="https://raw.githubusercontent.com/stvnmbt/pasok/main/src/static/images/PUP%20logo.png" alt="PUP Logo" style="display: block; margin: 0 auto; max-width: 80px; max-height: 80px; margin-bottom: 10px;">
     <div class="login-header">PASOK LOGIN</div>
     <div class="pup-form">
       <form role="form" method="post" action="">
@@ -165,7 +160,7 @@
       }
     }
   </script>
-</body>
+
 </html>
 
 {% endblock %}
