--- a/src/templates/accounts/register.html
+++ b/src/templates/accounts/register.html
@@ -1,109 +1,102 @@
 {% extends "_base.html" %}
 
+{% block header %}
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    overflow: auto;
+    position: relative;
+  }
+
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("https://raw.githubusercontent.com/stvnmbt/pasok/main/src/static/images/Lagoon.jpg");
+    background-size: cover;
+    filter: blur(0.9px);
+    opacity: 0.9;
+    z-index: -2;
+  }
+
+  .pup-form-container {
+    background: #fff;
+    width: 75%; /* Adjust the width as needed */
+    max-width: 450px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 10px;
+    padding: 1rem;
+    border: 0.001px solid rgba(0, 0, 0, 0.16);
+    border-top: 8px solid maroon;
+    border-radius: 16px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
+  }
+
+  .form-floating {
+    position: relative;
+  }
+
+  #toggleButton {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    width: 20px;
+  }
+
+  .login-header {
+    color: #800000;
+    font-size: 18px; /* Adjust the font size as needed */
+    font-weight: bold;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+
+  .form-control {
+    font-size: 14px; /* Adjust the font size as needed */
+    padding: 8px; /* Adjust the padding as needed */
+  }
+
+  .btn-primary {
+    background-color: #800000;
+    border-radius: 30px;
+    font-family: 'Roboto';
+    font-weight: 550;
+    font-size: 16px; /* Adjust the font size as needed */
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .btn-primary:focus {
+  outline: none;
+  }
+
+  .text-center {
+    margin-top: 15px;
+    font-size: 14px; /* Adjust the font size as needed */
+  }
+
+  .text-muted{
+    font-size: 10px;
+    padding: 10px;
+    font-style: italic;
+  }
+</style>
+{% endblock %}
+
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../static/fontawesome/css/all.min.css"> <!-- Replace with the correct path or use a CDN for Font Awesome -->
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      overflow: auto;
-      position: relative;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url("../static/images/Lagoon.jpg");
-      background-size: cover;
-      filter: blur(0.9px);
-      opacity: 0.9;
-      z-index: -2;
-    }
-
-    .pup-form-container {
-      background: #fff;
-      width: 75%; /* Adjust the width as needed */
-      max-width: 450px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      margin-top: 10px;
-      padding: 1rem;
-      border: 0.001px solid rgba(0, 0, 0, 0.16);
-      border-top: 8px solid maroon;
-      border-radius: 16px;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
-    }
-
-    .form-floating {
-      position: relative;
-    }
-
-    #toggleButton {
-      position: absolute;
-      top: 50%;
-      right: 10px;
-      transform: translateY(-50%);
-      cursor: pointer;
-      width: 20px;
-    }
-
-    .login-header {
-      color: #800000;
-      font-size: 18px; /* Adjust the font size as needed */
-      font-weight: bold;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    .form-control {
-      font-size: 14px; /* Adjust the font size as needed */
-      padding: 8px; /* Adjust the padding as needed */
-    }
-
-    .btn-primary {
-      background-color: #800000;
-      border-radius: 30px;
-      font-family: 'Roboto';
-      font-weight: 550;
-      font-size: 16px; /* Adjust the font size as needed */
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-    .btn-primary:focus {
-    outline: none;
-    }
-
-    .text-center {
-      margin-top: 15px;
-      font-size: 14px; /* Adjust the font size as needed */
-    }
-
-    .text-muted{
-      font-size: 10px;
-      padding: 10px;
-      font-style: italic;
-    }
-  </style>
-</head>
-
-<body>
-
   <div class="pup-form-container">
-    <img src="../static/images/PUP logo.png" alt="PUP Logo" style="display: block; margin: 0 auto; max-width: 80px; max-height: 80px; margin-bottom: 10px;">
+    <img src="https://storage.googleapis.com/pasoksystem.appspot.com/static/images/PUPLogo.png" alt="PUP Logo" style="display: block; margin: 0 auto; max-width: 80px; max-height: 80px; margin-bottom: 10px;">
     <div class="login-header">PASOK REGISTER</div>
 
     <div class="pup-form">
@@ -246,7 +239,5 @@
       }
     }
   </script>
-</body>
-</html>
 
 {% endblock %}
