--- a/src/templates/core/navbar.html
+++ b/src/templates/core/navbar.html
@@ -3,8 +3,8 @@
 <div class="container">
   <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: #800000; font-weight: 500;">
-        <img src="..\static\images\PUP logo.png"  style="width:40px; height: 40px; margin-right: 10px;"> PASOK</a>
+      <a class="navbar-brand" href="{{ url_for('core.home') }}" style="color: #800000; font-weight: 500;">
+        <img src="https://storage.googleapis.com/pasoksystem/static/images/PUP%20logo.png"  style="width:40px; height: 40px; margin-right: 10px;"> PASOK</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
