--- a/src/templates/core/student/qrcode.html
+++ b/src/templates/core/student/qrcode.html
@@ -5,7 +5,7 @@
         <h1 class="header-text">QR Code</h1>
         <hr>
         <div class="qr-code-image-container">
-            <img src="{{ url_for('core.view_qr_code') }}" alt="QR Code" class="qr-code-img">
+            <img src="data:image/png;base64, {{ qr_image }}" alt="QR Code" class="qr-code-img">
         </div>
         
         <a href="{{ url_for('core.download_qr_code') }}" class="download-button">Download QR Code</a>
