--- a/src/templates/core/faculty/classlist_details.html
+++ b/src/templates/core/faculty/classlist_details.html
@@ -42,7 +42,7 @@
         </table>
 
         <!-- Add a button to go back to classlist.html -->
-        <a href="{{ url_for('core.classlist_collection') }}" class="btn btn-primary">Back to Class List</a>
+        <a href="{{ url_for('core.classlist') }}" class="btn btn-primary">Back to Class List</a>
     </div>
 </div>
 
