--- a/src/templates/core/faculty/sidebar.html
+++ b/src/templates/core/faculty/sidebar.html
@@ -4,19 +4,7 @@
 
 {% block content %}
 
-<style>
-    .box {
-     -ms-flex: 1 1 auto;
-     flex: 1 1 auto;
-     margin-top: 17px;
-     padding: 1.25rem;
-     border: 0.001px solid rgba(0, 0, 0, 0.16);
-     border-top: 5px solid maroon;
-     border-radius: 10px;
-     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
- }
 
-</style>
 <!-- Sidebar -->
 <div class="container-fluid overflow-hidden">
     <div class="row vh-100 overflow-auto">
@@ -53,7 +41,14 @@
         </div>
         <div class="col d-flex flex-column h-100" >
             <div class="container-fluid p-0">
-                <div class="box">
+                <div class="row" style="-ms-flex: 1 1 auto;
+                flex: 1 1 auto;
+                margin-top: 17px;
+                padding: 2px;
+                border: 0.001px solid rgba(0, 0, 0, 0.16);
+                border-top: 5px solid maroon;
+                border-radius: 10px;
+                box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;">
                 {% block body %}{% endblock %}
                 </div>
             </div>
