--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -75,8 +75,8 @@
 {% endblock %}
 
 {% block body %}
-<h1 class="h3 mb-4"><strong> Dashboard</strong></h1>
-<hr>
+<h1 class="h3 mb-4" style="margin-top: 15px;"><strong> Dashboard</strong></h1>
+
 
 <div class="row">
     <div class="col-md-6 col-lg-3 mb-3">
