tidying up code

--- a/src/templates/core/faculty/realtime.html
+++ b/src/templates/core/faculty/realtime.html
@@ -32,7 +32,7 @@
                 <td>{{ au.first_name }}</td>
                 <td>{{ au.section_code }}</td>
                 <td>{{ au.created }}</td>
-                <td>{{ au.attendance_status }}</td>
+                <td>{{ au.attendance_status.value }}</td>
             </tr>
             {% endfor %}
         </tbody>
