--- a/src/templates/core/faculty/records.html
+++ b/src/templates/core/faculty/records.html
@@ -27,7 +27,7 @@
               <td>{{ s.last_name }}</td>
               <td>{{ s.first_name }}</td>
               <td>{{ s.middle_name }}</td>
-              <td>{{ s.section_name }}</td>
+              <td>{{ s.section_code }}</td>
               <td>{{ s.present_count }}</td>
               <td>{{ s.late_count }}</td>
               <td>{{ s.absent_count }}</td>
