--- a/src/templates/core/faculty/classlist_details.html
+++ b/src/templates/core/faculty/classlist_details.html
@@ -1,14 +1,15 @@
 {% extends "core/faculty/sidebar.html" %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 {% block body %}
 
 <h1 class="h3 mb-4"><strong>Class List Details</strong></h1>
 
+<a href="{{ url_for('core.classlist') }}" class="btn btn-primary">Back to Class List</a>
+
 <!-- Display class list entry details -->
 <div class="row">
     <div class="col-auto">
-        <h4>{{ classlist_entry.subject_name }} - {{ classlist_entry.section_name }}</h4>
+        <h4>{{ classlist_entry.subject_name }} - {{ classlist_entry.section_code }}</h4>
         <p>School Year: {{ classlist_entry.school_year }}</p>
         <p>Semester: {{ classlist_entry.semester }}</p>
     </div>
@@ -40,9 +41,6 @@
                 {% endfor %}
             </tbody>
         </table>
-
-        <!-- Add a button to go back to classlist.html -->
-        <a href="{{ url_for('core.classlist') }}" class="btn btn-primary">Back to Class List</a>
     </div>
 </div>
 
