--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -16,25 +16,40 @@
     google.charts.setOnLoadCallback(drawChart);
 
     function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-            ['Status', 'Count', { role: 'style' }],
-            ['Present', 50, 'green'],
-            ['Late', 20, 'orange'],
-            ['Absent', 10, 'red'],
-        ]);
+    // Make an AJAX request to the Flask route to get actual data
+    $.ajax({
+        url: '/get_attendance_data',  // Replace with the actual route for your Flask view
+        method: 'GET',
+        dataType: 'json',
+        success: function (data) {
+            // Use the returned data to populate the chart
+            var chartData = [['Status', 'Count', { role: 'style' }]];
+            $.each(data, function (index, item) {
+                chartData.push([item.status, item.count, item.color]);
+            });
 
-        var options = {
-            title: '',
-            titleTextStyle: {
-                fontSize: 20, // Set the font size to make it bigger
-            },
-            chartArea: { width: '100%', height: '95%' }, // I-customize ang laki ng chart area
-        };
+            var chartData = google.visualization.arrayToDataTable(chartData);
 
-        var chart = new google.visualization.PieChart(document.getElementById('attendancePieChart'));
+            var options = {
+                title: '',
+                titleTextStyle: {
+                    fontSize: 20,
+                },
+                chartArea: { width: '100%', height: '95%' },
+            };
 
-        chart.draw(data, options);
-    }
+            var chart = new google.visualization.PieChart(document.getElementById('attendancePieChart'));
+            chart.draw(chartData, options);
+        },
+        error: function (error) {
+            console.error('Error fetching data:', error);
+        }
+    });
+}
+
+    $(document).ready(function () {
+        drawChart();
+    });
 
     function downloadAction(subject, section) {
         $.ajax({
@@ -81,17 +96,17 @@
 <div class="row">
     <div class="col-md-6 col-lg-3 mb-3">
         <select class="form-select" style="height: 35px; background-color: #f0f0f0; color: black;">
-            <option selected>School Year</option>
-            <option value="1">2023</option>
-            <option value="2">2024</option>
-            <option value="3">2025</option>
+            <option selected>Select School Year</option>
+            <option value="2324">2324</option>
+            <option value="2425">2425</option>
         </select>
     </div>
     <div class="col-md-6 col-lg-3 mb-3">
         <select class="form-select" style="height: 35px; background-color: #f0f0f0; color: black;">
-            <option selected>Semester</option>
-            <option value="1">First Sem</option>
-            <option value="2">Second Sem</option>
+            <option selected>Select Semester</option>
+            <option value="Semester.FIRST">First Semester</option>
+            <option value="Semester.SECOND">Second Semester</option>
+            <option value="Semester.SUMMER">Summer Semester</option>
         </select>
     </div>
 </div>
@@ -110,18 +125,20 @@
     <table class="table datatables table-bordered table-condensed table-striped p-0 m-0 dataTable no-footer dtr-inline" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info" style="width: 100%; border: 1px solid #696969; border-radius: 10px;">
         <thead>
             <tr role="row">
-                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Subject</th>
-                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Section</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">School Year</th>
                 <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Semester</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Section</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Subject</th>
                 <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Actions</th>
             </tr>
         </thead>
         <tbody>
             {% for classlist in classlists %}
             <tr role="row" style="background-color: #f9f9f9;">
-                <td tabindex="0">{{ classlist.subject_name }}</td>
-                <td>{{ classlist.section_code }}</td>
+                <td tabindex="0">{{ classlist.school_year }}</td>
                 <td>{{ classlist.semester.value }}</td>
+                <td>{{ classlist.section_code }}</td>
+                <td>{{ classlist.subject_name }}</td>
                 <td>
                     <button class="btn btn-primary btn-sm custom-btn" onclick="downloadAction('{{ classlist.subject_name }}', '{{ classlist.section_code }}')">Download </button>
                     <button class="btn btn-danger btn-sm custom-btn" onclick="deleteAction('{{ classlist.subject_name }}', '{{ classlist.section_code }}')"> Delete</button>
@@ -132,30 +149,6 @@
     </table>
 </div>
 
-
-<script>
-function addRow(subject, section, semester) {
-    var table = document.getElementById("DataTables_Table_0").getElementsByTagName('tbody')[0];
-    var newRow = table.insertRow(table.rows.length);
-
-    var cell1 = newRow.insertCell(0);
-    cell1.innerHTML = subject;
-
-    var cell2 = newRow.insertCell(1);
-    cell2.innerHTML = section;
-
-    var cell3 = newRow.insertCell(2);
-    cell3.innerHTML = semester;
-
-    var cell4 = newRow.insertCell(3);
-    cell4.innerHTML = `<button class="btn btn-primary btn-sm" onclick="downloadAction('${subject}', '${section}')">Download</button>
-                      <button class="btn btn-danger btn-sm" onclick="deleteAction('${subject}', '${section}')">Delete</button>`;
-}
-
-
-// Call addRow with sample data
-addRow("New Subject", "New Section", "New Semester");
-</script>
 
 
 {% endblock %}
