--- a/src/templates/core/faculty/sidebar.html
+++ b/src/templates/core/faculty/sidebar.html
@@ -6,8 +6,8 @@
 
 
 <!-- Sidebar -->
-<div class="container-fluid overflow-hidden">
-    <div class="row vh-100 overflow-auto">
+<div class="container-fluid ">
+    <div class="row vh-100 ">
         <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-light d-flex sticky-top">
             <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
                 <ul class="nav flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start" id="menu">
